--- a/BaiTap_Week5/src/main/resources/templates/index.html
+++ b/BaiTap_Week5/src/main/resources/templates/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Trang Chính</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div class="container mt-5">
+    <h2 class="text-center">Chọn hành động</h2>
+    <div class="d-flex justify-content-center mt-4">
+        <!-- Nút cho link đến trang đăng nhập ứng viên -->
+        <a href="/candidate/login" class="btn btn-primary mx-2">Login để tìm việc phù hợp</a>
 
+        <!-- Nút cho link đến trang đăng bài tuyển dụng -->
+        <a href="/job/post-job" class="btn btn-success mx-2">Đăng bài tuyển dụng</a>
+
+        <!-- xuât danh sách có phân trang-->
+        <a href="/list" class="btn btn-success mx-2">Danh sách có phân trang</a>
+
+        <!-- xuât danh  ko phân trang-->
+        <a href="/listkpt" class="btn btn-success mx-2">Danh sách không phân trang</a>
+    </div>
+</div>
 </body>
 </html>
