xong câu 7 Week 5  Đề xuất một số skill mà ứng viên chưa có để học.

--- a/BaiTap_Week5/src/main/resources/templates/index.html
+++ b/BaiTap_Week5/src/main/resources/templates/index.html
@@ -29,6 +29,9 @@
 
         <!-- Xuất danh ứng viên có skill phù hợp cho company chọn -->
         <a href="/candidate/skill_search" class="btn btn-warning mb-3">Tìm danh sách ứng viên có Skill phù hợp cho company</a>
+
+        <!-- Xuất danh sách Các Skill ứng viên cần học thêm-->
+        <a href="/candidate/login_learnSkill" class="btn btn-warning mb-3">Danh sách Các Skill ứng viên cần học thêm</a>
     </div>
 </div>
 </body>
