xong tất cả các câu của Week 5 và nọp kèm file word minh chứng  .

--- a/BaiTap_Week5/src/main/resources/templates/skill-search.html
+++ b/BaiTap_Week5/src/main/resources/templates/skill-search.html
@@ -10,7 +10,7 @@
     <h2 class="text-center">Tìm Ứng Viên Có Skill Phù Hợp</h2>
     <form method="post" action="/candidate/skill_search">
         <div class="mb-3">
-            <label for="skillName" class="form-label">Email</label>
+            <label for="skillName" class="form-label">Nhập Skill Cần Tìm</label>
             <input type="text" class="form-control" id="skillName" name="skillName" placeholder="Nhập Skill cần tìm" required>
         </div>
         <button type="submit" class="btn btn-primary">Tìm Kiếm</button>
