--- a/BaiTap_Week5/src/main/resources/templates/index.html
+++ b/BaiTap_Week5/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Chọn hành động</h2>
+    <h2 class="text-center mb-4">Chọn hành động - 21054421 - Trần Trọng Tín</h2>
     <div class="btn-container d-flex flex-column align-items-center">
         <!-- Nút cho link đến trang đăng nhập ứng viên -->
         <a href="/candidate/login" class="btn btn-primary mb-3">Login để tìm việc phù hợp</a>
@@ -31,7 +31,7 @@
         <a href="/candidate/skill_search" class="btn btn-warning mb-3">Tìm danh sách ứng viên có Skill phù hợp cho company</a>
 
         <!-- Xuất danh sách Các Skill ứng viên cần học thêm-->
-        <a href="/candidate/login_learnSkill" class="btn btn-warning mb-3">Danh sách Các Skill ứng viên cần học thêm</a>
+        <a href="/candidate/login_learnSkill" class="btn btn-danger mb-3">Danh sách Các Skill ứng viên cần học thêm</a>
     </div>
 </div>
 </body>
