--- a/BaiTap_Week6/src/main/resources/templates/User_Screen/UpdateUser.html
+++ b/BaiTap_Week6/src/main/resources/templates/User_Screen/UpdateUser.html
@@ -80,6 +80,13 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" th:value="${user.email}" required>
 
+        <label for="intro">Giới thiệu:</label>
+        <input type="text" id="intro" name="intro" th:value="${user.intro}" required>
+
+        <label for="profile">Profile:</label>
+        <input type="text" id="profile" name="profile" th:value="${user.profile}" required>
+
+
         <label for="password">Mật khẩu:</label>
         <input type="password" id="password" name="passwordHash" required>
 
@@ -90,14 +97,14 @@
 
 <script th:inline="javascript">
     /*<![CDATA[*/
-    // Kiểm tra nếu có thông báo thành công
     var successMessage = "[[${capnhatthanhcong}]]";
     var errorMessage = "[[${capnhatthatbai}]]";
 
     if (successMessage && successMessage !== "null") {
-        alert(successMessage);
+        alert(successMessage);  // Hiển thị thông báo cập nhật thành công
+        window.location.href = "/home"; // Tự động điều hướng về trang chủ sau khi nhấn "OK"
     } else if (errorMessage && errorMessage !== "null") {
-        alert(errorMessage);
+        alert(errorMessage);  // Hiển thị thông báo thất bại
     }
     /*]]>*/
 </script>
