thêm chức năng add-candidate và delete-candidate cho bài tập week6

--- a/BaiTap_Week5/src/main/resources/templates/index.html
+++ b/BaiTap_Week5/src/main/resources/templates/index.html
@@ -32,6 +32,11 @@
 
         <!-- Xuất danh sách Các Skill ứng viên cần học thêm-->
         <a href="/candidate/login_learnSkill" class="btn btn-danger mb-3">Danh sách Các Skill ứng viên cần học thêm</a>
+
+        <!--thêm mới candidate-->
+        <a href="/candidate/add-candidate" class="btn btn-danger mb-3">Thêm ứng viên mới</a>
+        <!--xóa  candidate-->
+        <a href="/candidate/delete-candidate" class="btn btn-danger mb-3">Xóa ứng viên </a>
     </div>
 </div>
 </body>
